# dace-fft

./: LICENCE  README.MD  dace-dft-halved.py  dace-dft-mkl.py  dace-dft.py  dace-fft-cpu-mkl.py  dace-fft-final.py  dace-fft-gpu.py  dace-fft-naive.py  dace-fft-packed-matmul.py  dace-fft.py  fft.py  python-fft.py
Benchmarks/: README.MD
Benchmarks/dace_benchmark/: benchmark.cpp
Benchmarks/fft_benchmark_cpu/: CMakeLists.txt
Benchmarks/fft_benchmark_cpu/include/: fftw_test.h
Benchmarks/fft_benchmark_cpu/src/: fftw_test.cpp  main.cpp  utils.cpp
Benchmarks/fft_benchmark_gpu/: CMakeLists.txt
Benchmarks/fft_benchmark_gpu/include/: cufft_test.cuh  utils.h
Benchmarks/fft_benchmark_gpu/src/: cufft_test.cu  main.cpp
